refactor: main window update for adding new vehicle objects

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@
         vehicle_id: 1  
         vehicle_type: "uav"
         vehicle_description: "UAV vehicle"
-      vehicle_2:
-        vehicle_id: 2 
-        vehicle_type: "uav"
-        vehicle_description: "UAV vehicle"
+#      vehicle_2:
+#        vehicle_id: 2 
+#        vehicle_type: "uav"
+#        vehicle_description: "UAV vehicle"
